--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="esp">
 <head>
   <meta charset="utf-8">
-  <title>Registro Oficios</title>
+  <title>Sistema de Ventas - Regalos</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
